--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,15 @@
 
+body {
+	background-image: url ("./resources/img/building.png");
+}
+
 div {
-	background-image: url("./resources/img/building.png");
-	background-size: 80px 60px;
-    background-repeat: no-repeat;
+	width: 100%;
+	height: 100px;
+	
+}
+li {
+	color: white;
+	text-align: center;
+	text-align: bottom;
 }
